<resources>
    <string name="app_name">Biometric Authentication POC Test</string>
    <string name="login_page">เข้าสู่ระบบสำเร็จ!</string>
    <string name="create_a_new_pin">Create a new PIN</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="backspace">Backspace</string>
    <string name="enter_your_pin">Enter your PIN</string>
</resources>