<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EnterPinActivity">

    <LinearLayout
        android:id="@+id/pin_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_pin"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/pin_dots_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/dot_1"
                style="@style/PinDot" />
            <View
                android:id="@+id/dot_2"
                style="@style/PinDot" />
            <View
                android:id="@+id/dot_3"
                style="@style/PinDot" />
            <View
                android:id="@+id/dot_4"
                style="@style/PinDot" />
            <View
                android:id="@+id/dot_5"
                style="@style/PinDot" />
            <View
                android:id="@+id/dot_6"
                style="@style/PinDot" />

        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:columnCount="3">

        <Button
            android:id="@+id/btn_1"
            style="@style/PinButton"
            android:text="@string/_1" />
        <Button
            android:id="@+id/btn_2"
            style="@style/PinButton"
            android:text="@string/_2" />
        <Button
            android:id="@+id/btn_3"
            style="@style/PinButton"
            android:text="@string/_3" />

        <Button
            android:id="@+id/btn_4"
            style="@style/PinButton"
            android:text="@string/_4" />
        <Button
            android:id="@+id/btn_5"
            style="@style/PinButton"
            android:text="@string/_5" />
        <Button
            android:id="@+id/btn_6"
            style="@style/PinButton"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btn_7"
            style="@style/PinButton"
            android:text="@string/_7" />
        <Button
            android:id="@+id/btn_8"
            style="@style/PinButton"
            android:text="@string/_8" />
        <Button
            android:id="@+id/btn_9"
            style="@style/PinButton"
            android:text="@string/_9" />

        <View android:layout_width="0dp" android:layout_height="0dp"/>

        <Button
            android:id="@+id/btn_0"
            style="@style/PinButton"
            android:text="@string/_0" />

        <ImageButton
            android:id="@+id/btn_backspace"
            style="@style/PinButton"
            android:src="@drawable/ic_backspace"
            android:contentDescription="@string/backspace" />
    </GridLayout>

</RelativeLayout>